--- a/src/Card.scss
+++ b/src/Card.scss
@@ -1,5 +1,12 @@
 .card {
   position: absolute;
-  top: 50%;
-  margin-top: 5rem;
+  margin-top: 3em;
+  img {
+    margin: 0;
+    padding: 0;
+    border-radius: 10px;
+    -webkit-box-shadow: 10px 10px 51px 25px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 10px 10px 51px 25px rgba(0, 0, 0, 0.1);
+    box-shadow: 10px 10px 51px 25px rgba(0, 0, 0, 0.1);
+  }
 }
